@@ -4299,7 +4299,8 @@ ul.tb-icon-list {
 	padding: 0;
 }
 .widget li {
-	margin: 0;
+	line-height: 1.3;
+	margin: 0 0 5px 0;
 	padding: 0;
 }
 .widget li > a > .fa {
